# pre-commit-docx-plain

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml
src/docxplain/: cli.py  converter.py  formats.py
tests/: converter_test.py
tests/data/changed/: test_doc.txt
tests/data/new/: test_doc.docx
tests/data/trailing-whitespace/: input.txt  output.txt
tests/data/unchanged/: test_doc.txt
