[metadata]
name = docxplain
version = 0.3.0
description = Convert Office (docx) files to plain text using pandoc.
author = Jonathan Sick
author_email = hi@jsick.codes
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/jsickcodes/pre-commit-docx-plain
project_urls =
    Change log = https://github.com/jsickcodes/pre-commit-docx-plain/blob/master/CHANGELOG.rst
    Source code = https://github.com/jsickcodes/pre-commit-docx-plain
    Issue tracker = https://github.com/jsickcodes/pre-commit-docx-plain/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
keywords =
    precommit

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    importlib_metadata; python_version < "3.8"
    pypandoc

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    docxplain = docxplain.cli:main

[options.extras_require]
pandoc =
    py-pandoc
dev =
    pytest

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP 8
# W503: line break after binary operator, flake8 disagrees with PEP 8
ignore = E203, W503

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
